# avataa-settings

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  ruff.toml
app/: .flake8  init_app.py  main.py  run_grpc.py  settings.py
app/v1/: alembic.ini  settings.py
app/v1/controllers/exceptions/: base.py
app/v1/database/: __init__.py  database.py
app/v1/database/models/: color_range.py  fault_manager.py  modules.py  object_params.py  process.py  state.py  table.py  user_settings.py
app/v1/grpc_config/: getter_example.py  grpc_server.py  grpc_utils.py
app/v1/migrations/: env.py
app/v1/migrations/versions/: 02db1c4b60e7_color_range_2bool_added.py  060957ed9336_tmo_id.py  1f4a714a370d_fix.py  24fd466c28c2_added_module_settings_log_table.py  3d75a4ecab7c_update_operators_data_1.py  59fc2f621fba_range_unique_new.py  5a13361e9ec0_added_a_new_column_for_filterset.py  5b549c80ddae_state.py  8101a8328142_add_hidden_column_for_filterset.py  909a5bdc5b16_update_operators_data_in_filterset.py  97670ddeaf99_create_module_settings_table.py  99c15b94fcc0_fm.py  a7c006bc4b22_changed_column_names_for_module_.py  ac22cf6984ad_user_settings.py  ad6f395091ed_added_order_and_pinned_columns_for_.py  b2efe2f8c72a_serhii.py  dd25e5da3b85_initial.py  df966d97f63d_add_tmo_info_with_priority.py  e827cdb8d4c5_new_colors.py  ea6506666b2c_range_val_type.py  ed4433f18551_added_direction.py
app/v1/routers/color_range/: color_range.py  models.py  utils.py
app/v1/security/: security_config.py  security_data_models.py  security_factory.py  security_interface.py
(+47 files in other folders)
