[project]
name = "frontend-settings"
version = "3.0.18"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.13",
    "alembic==1.14.1",
    "apscheduler==3.11.0",
    "asyncpg==0.30.0",
    "cachetools==6.1.0",
    "fastapi==0.116.0",
    "grpcio==1.64.1",
    "protobuf==5.29.3",
    "pydantic==2.11.7",
    "pyjwt[crypto]==2.10.1",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "sqlalchemy[asyncio]==2.0.41",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
]
lint = [
    "ruff==0.12.2",
]
tests = [
]
security = [
    "pip-audit==2.7.3",
]
migrations = [
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]>=2.0.41",
]
